--- a/css/Style.css
+++ b/css/Style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 .dark{
     background-color: #232326;
@@ -56,4 +57,41 @@ header{
 }
 .nav-link:hover{
     color: #D40000;
+}
+.social{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 60px;
+    margin-top: 100px;
+}
+.project{
+    margin:0;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+}
+.project-img{
+    width: 16px;
+    height: 12px;
+    display: block;
+    background-image: url(../img/arrow.svg);
+    margin-left: 15px;
+}
+.title-h3{
+    font-size: 16px;
+    font-weight: 700;
+}
+.skill{
+    display: flex;
+    justify-content: space-between;
+}
+.skill-item{
+    flex: 0 0 24%;
+}
+.skill .title-h3{
+    text-transform: uppercase;
+}
+.skill .discription{
+    line-height: 150%;
 }
