--- a/css/Style.css
+++ b/css/Style.css
@@ -9,9 +9,18 @@ body{
 .dark.nav-link{
     color: #F3F2F0;
 }
+.main{
+    position: relative;
+}
+.h1{
+    position: relative;
+    z-index: 4;
+}
 .name{
     font-size: 28px;
     color: #F3F2F0;
+    position: relative;
+    z-index: 3;
 }
 .h1{
     font-size: 74px;
@@ -58,11 +67,29 @@ header{
 .nav-link:hover{
     color: #D40000;
 }
+.nav-info .nav-item{
+    position: relative;
+}
+.nav-info .nav-item::before{
+    content:'';
+    width: 1px;
+    height: 24px;
+    background-color:rgba(243, 242, 240, 0.5);
+    position: absolute;
+    left: 0;
+    top: calc(50%-12px);
+}
+.nav-info.nav-item:first-child::before{
+    display: none;
+}
 .social{
     display: flex;
     justify-content: space-between;
     padding-bottom: 60px;
     margin-top: 100px;
+}
+.social .social-item{
+    position: relative;
 }
 .project{
     margin:0;
@@ -94,4 +121,50 @@ header{
 }
 .skill .discription{
     line-height: 150%;
+}
+.elipse{
+    fill: #D40000;
+}
+.traingle{
+    fill: #FFF;
+}
+.elipse-main{
+    width: 253px;
+    height: 253px;
+    position: absolute;
+    left: -131px;
+    top: calc(50%-12px);
+    z-index: 1;
+}
+.traingle{
+    position: absolute;
+    left: -161px;
+    top: 80px;
+    z-index: 2;
+}
+.elipse-nav{
+    width: 106px;
+    height: 106px;
+    position: absolute;
+    top: -43px;
+    right: 38px;
+}
+.steps-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.steps-title{
+    font-size: 28px;
+    line-height: 150%;
+}
+.steps-title span{
+    margin-right:45px;
+}
+.steps-description{
+    font-size: 16px;
+}
+.section-steps{
+    padding-top: 180px;
+    padding-bottom: 198px;
 }
