--- a/css/Style.css
+++ b/css/Style.css
@@ -79,7 +79,7 @@ header{
     left: 0;
     top: calc(50%-12px);
 }
-.nav-info.nav-item:first-child::before{
+.nav-info.nav-item:first-child ::before{
     display: none;
 }
 .social{
@@ -87,6 +87,7 @@ header{
     justify-content: space-between;
     padding-bottom: 60px;
     margin-top: 100px;
+    border-bottom: 1px solid #F3F2F0;
 }
 .social .social-item{
     position: relative;
@@ -112,9 +113,10 @@ header{
 .skill{
     display: flex;
     justify-content: space-between;
+    padding-top: 60px;
 }
 .skill-item{
-    flex: 0 0 24%;
+    flex: 0 0 21%;
 }
 .skill .title-h3{
     text-transform: uppercase;
@@ -153,6 +155,12 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #F3F2F0 ;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.steps-item:first-child{
+    border-top: 1px solid #F3F2F0;
 }
 .steps-title{
     font-size: 28px;
@@ -163,6 +171,8 @@ header{
 }
 .steps-description{
     font-size: 16px;
+    flex: 0 0 49%;
+    max-width: 49%;
 }
 .section-steps{
     padding-top: 180px;
