--- a/css/Style.css
+++ b/css/Style.css
@@ -9,6 +9,11 @@ body{
 .dark.nav-link{
     color: #F3F2F0;
 }
+.dark .steps-item,
+.dark .about-title,
+.dark .about-description {
+    border-bottom:1px solid #F3F2F0;
+}
 .main{
     position: relative;
 }
@@ -177,4 +182,50 @@ header{
 .section-steps{
     padding-top: 180px;
     padding-bottom: 198px;
+}
+.about{
+    display: grid;
+    grid-template: 349px/repeat(4,1fr)
+}
+.about-title{
+    grid-column: 1/3;
+    grid-row:1/2 ;
+    font-size: 28px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    padding-bottom: 62px;
+    padding-top: 62px;
+}
+.about-description{
+    grid-column: 3/5;
+    grid-row: 1/2;
+    font-size: 28px;
+    line-height: 150%;
+    opacity: 0.8;
+    padding:  62px 10px 62px 20px;
+}
+.about-01{
+    grid-column: 3/4 ;
+    grid-row: 2/3 ;
+    padding: 65px 20px 35px 20px;
+}
+.about-02{
+    grid-column: 4/5 ;
+    grid-row: 2/3 ;
+    padding: 65px 10px 35px 10px;
+}
+.about-03{
+    grid-column: 3/4 ;
+    grid-row: 3/4;
+    padding: 35px 19px ;
+}
+.about-04{
+    grid-column: 4/5 ;
+    grid-row: 3/4;
+    padding: 35px 10px 30px 10px;
+}
+.about-item .description{
+    line-height: 150%;
+    opacity: 0.8;
 }
